kubernetes-networks/canary/canary-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: canary
  name: canary
