kubernetes-networks/canary/canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: meistuss/otus_intro:latest
        volumeMounts:
        - name: app
          mountPath: /app
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
      volumes:
      - name: app
        emptyDir: {}
